# eva

./: .gitignore  README.md  eva.py  pyproject.toml
docs/superpowers/plans/: 2026-05-27-command-safety.md  2026-05-27-conversation-mode.md  2026-05-27-eva-performance-and-modularization.md  2026-05-29-startup-banner.md
docs/superpowers/specs/: 2026-05-27-command-safety-design.md  2026-05-27-conversation-mode-design.md  2026-05-27-eva-memory-design.md  2026-05-27-eva-performance-and-modularization-design.md  2026-05-29-startup-banner-design.md
eva/: assistant.py  audio.py  banner.py  brain.py  cli.py  config.py  executor.py  memory.py  safety.py  stt.py  tts.py
tests/: test_assistant_logic.py  test_banner.py  test_brain.py  test_config.py  test_memory.py  test_safety.py  test_segmenter.py  test_streaming_say_parser.py
